--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,12 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -29,6 +35,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.3.jar=commons-fileupload-1.3.3.jar
 file.reference.javax.mail.jar=javax.mail.jar
 file.reference.mssql-jdbc-6.4.0.jre8.jar=C:\\Program Files (x86)\\Microsoft JDBC Driver 6.4 for SQL Server\\sqljdbc_6.4\\esn\\mssql-jdbc-6.4.0.jre8.jar
 includes=**
@@ -46,7 +53,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-6.4.0.jre8.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.commons-fileupload-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
